--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,34 @@
 <resources>
-    <string name="app_name">2048Colors</string>
-    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="app_name" translatable="false">2048Colors</string>
+    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
+
+    <string name="score_text" translatable="false">PUNTEGGIO</string>
 
     <!-- Preference Titles -->
-    <string name="game_settings_header">Opzioni di gioco</string>
-    <string name="audio_header">Opzioni Audio</string>
+    <string name="game_settings_header" translatable="false">Opzioni di gioco</string>
+    <string name="audio_header" translatable="false">Opzioni Audio</string>
 
     <!-- Game Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="levels_title">Livello di gioco</string>
+    <string name="signature_title" translatable="false">Your signature</string>
+    <string name="levels_title" translatable="false">Livello di gioco</string>
 
     <!-- Audio Preferences -->
-    <string name="sfx_title">Effetti sonori di gioco</string>
-    <string name="music_title">Musica di sottofondo</string>
-    <string name="music_summary_on">Musica di sottofondo attiva nel gioco e nei menu</string>
-    <string name="music_summary_off">Musica di sottofondo disattivata</string>
+    <string name="sfx_title" translatable="false">Effetti sonori di gioco</string>
+    <string name="music_title" translatable="false">Musica di sottofondo</string>
+    <string name="music_summary_on" translatable="false">Musica di sottofondo attiva nel gioco e nei menu</string>
+    <string name="music_summary_off" translatable="false">Musica di sottofondo disattivata</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
 
-    <string name="game_win_message">Complimenti, hai superato il livello. Vuoi giocare al prossimo livello o tornare al menu principale?</string>
-    <string name="game_win_title">LIVELLO SUPERATO!</string>
-    <string name="menu_option">MENU PRINCIPALE</string>
-    <string name="next_option">PROSSIMO LIVELLO</string>
+    <string name="game_win_message" translatable="false">Complimenti, hai superato il livello. Vuoi giocare al prossimo livello o tornare al menu principale?</string>
+    <string name="game_win_title" translatable="false">LIVELLO SUPERATO!</string>
+    <string name="menu_option" translatable="false">MENU PRINCIPALE</string>
+    <string name="next_option" translatable="false">PROSSIMO LIVELLO</string>
+    <string name="game_over_message" translatable="false">Nessuna mossa disponibile, non sei riuscito a superare questo livello. Vuoi riprovare questo livello o tornare al menu principale?</string>
+    <string name="game_over_title" translatable="false">GAME OVER</string>
+    <string name="retry_option" translatable="false">RIPROVA</string>
+    <string name="level_name">LIVELLO 0</string>
+    <string name="level_description">numero di colori: 6</string>
+
+
 </resources>
